chore(task): sort tasks alphabetically

--- a/Taskfile.yml
+++ b/Taskfile.yml
@@ -43,6 +43,18 @@ tasks:
       - rm Gemfile*.lock
       - rm -rf gemfiles
 
+  ##
+  # NOTE: JRuby 9.4 aims CRuby 3.1 compatibility.
+  # - https://www.jruby.org/download
+  #
+  docker:bash:jruby_9.4:
+    cmds:
+      - docker run --rm -it -v $(pwd):/gem convenient_service:jruby-9.4 bash
+    interactive: true
+    preconditions:
+      - sh: '[ "${IN_DOCKER_CONTAINER}" != "true" ]'
+        msg: This task can be invoked only from the host operating system (https://www.ibm.com/cloud/learn/containerization)
+
   docker:bash:ruby_2.7:
     cmds:
       - docker run --rm -it -v $(pwd):/gem convenient_service:2.7 bash
@@ -76,18 +88,6 @@ tasks:
         msg: This task can be invoked only from the host operating system (https://www.ibm.com/cloud/learn/containerization)
 
   ##
-  # NOTE: JRuby 9.4 aims CRuby 3.1 compatibility.
-  # - https://www.jruby.org/download
-  #
-  docker:bash:jruby_9.4:
-    cmds:
-      - docker run --rm -it -v $(pwd):/gem convenient_service:jruby-9.4 bash
-    interactive: true
-    preconditions:
-      - sh: '[ "${IN_DOCKER_CONTAINER}" != "true" ]'
-        msg: This task can be invoked only from the host operating system (https://www.ibm.com/cloud/learn/containerization)
-
-  ##
   # NOTE: TruffleRuby 22.3 aims CRuby 3.1 compatibility.
   # - https://github.com/oracle/truffleruby/blob/master/doc/user/compatibility.md
   #
@@ -107,6 +107,27 @@ tasks:
       - task: docker:build:ruby_3.2
       - task: docker:build:jruby_9.4
       - task: docker:build:truffleruby_22.3
+    preconditions:
+      - sh: '[ "${IN_DOCKER_CONTAINER}" != "true" ]'
+        msg: This task can be invoked only from the host operating system (https://www.ibm.com/cloud/learn/containerization)
+
+  ##
+  # NOTE: JRuby 9.4 aims CRuby 3.1 compatibility.
+  # - https://www.jruby.org/download
+  #
+  docker:build:jruby_9.4:
+    cmds:
+      ##
+      # NOTE: Meaning of `|| 2> /dev/null`.
+      # https://stackoverflow.com/a/10250395/12201472
+      #
+      # NOTE: Meaning of `|| true`.
+      # https://superuser.com/a/887349/1180656
+      #
+      - rm Gemfile.jruby-9.4 2> /dev/null || true
+      - rm Gemfile.jruby-9.4.lock 2> /dev/null || true
+      - cp Gemfile Gemfile.jruby-9.4
+      - docker build . -f docker/jruby-9.4/Dockerfile -t convenient_service:jruby-9.4
     preconditions:
       - sh: '[ "${IN_DOCKER_CONTAINER}" != "true" ]'
         msg: This task can be invoked only from the host operating system (https://www.ibm.com/cloud/learn/containerization)
@@ -180,27 +201,6 @@ tasks:
         msg: This task can be invoked only from the host operating system (https://www.ibm.com/cloud/learn/containerization)
 
   ##
-  # NOTE: JRuby 9.4 aims CRuby 3.1 compatibility.
-  # - https://www.jruby.org/download
-  #
-  docker:build:jruby_9.4:
-    cmds:
-      ##
-      # NOTE: Meaning of `|| 2> /dev/null`.
-      # https://stackoverflow.com/a/10250395/12201472
-      #
-      # NOTE: Meaning of `|| true`.
-      # https://superuser.com/a/887349/1180656
-      #
-      - rm Gemfile.jruby-9.4 2> /dev/null || true
-      - rm Gemfile.jruby-9.4.lock 2> /dev/null || true
-      - cp Gemfile Gemfile.jruby-9.4
-      - docker build . -f docker/jruby-9.4/Dockerfile -t convenient_service:jruby-9.4
-    preconditions:
-      - sh: '[ "${IN_DOCKER_CONTAINER}" != "true" ]'
-        msg: This task can be invoked only from the host operating system (https://www.ibm.com/cloud/learn/containerization)
-
-  ##
   # NOTE: TruffleRuby 22.3 aims CRuby 3.1 compatibility.
   # - https://github.com/oracle/truffleruby/blob/master/doc/user/compatibility.md
   #
@@ -228,13 +228,6 @@ tasks:
   docker:start:
     cmds:
       - open -a Docker
-
-  ##
-  # NOTE: Dev only command.
-  #
-  editor:open:
-    cmds:
-      - code .
 
   ##
   # NOTE: `sdoc` (wrapper for `rdoc`) is replaced by `yard`, since you have a feeling like every time is a first time with `rdoc`.
@@ -278,6 +271,13 @@ tasks:
     preconditions:
       - sh: '[ "${IN_DOCKER_CONTAINER}" != "true" ]'
         msg: This task can be invoked only from the host operating system (https://www.ibm.com/cloud/learn/containerization)
+
+  ##
+  # NOTE: Dev only command.
+  #
+  editor:open:
+    cmds:
+      - code .
 
   ##
   # NOTE: A trailing "/**" matches everything inside.
@@ -463,7 +463,7 @@ tasks:
   test:
     cmds:
       - task: rspec
-      - task: minimal
+      - task: minitest
 
   ##
   # NOTE: Dev only command.
