refactor(utils): rename instance_variable_fetch to memoize_including_falsy_values

--- a/.dev/.tmuxinator.yml
+++ b/.dev/.tmuxinator.yml
@@ -1,3 +1,7 @@
+##
+# NOTE: Tmuxinator config options.
+# - https://github.com/tmuxinator/tmuxinator#create-a-project
+#
 name: convenient_service
 root: .
 
