--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -21,6 +21,11 @@ require:
   # NOTE: Custom Standard cop that should be loaded before `config/base.yml`.
   #
   - standard/cop/block_single_line_braces
+  ##
+  # A RuboCop Cop that detects the use of magic numbers within instance methods.
+  # https://github.com/meetcleo/rubocop-magic_numbers
+  #
+  - rubocop-magic_numbers
 
 inherit_gem:
   standard: config/base.yml
@@ -43,3 +48,15 @@ AllCops:
     # NOTE: Excludes dependencies from linting.
     #
     - lib/convenient_service/dependencies/**/*
+
+MagicNumbers:
+  Exclude:
+    ##
+    # NOTE: Excludes the following files/folders from linting magic numbers.
+    # - https://github.com/meetcleo/rubocop-magic_numbers
+    # - https://docs.rubocop.org/rubocop/configuration.html#includingexcluding-files
+    #
+    - Rakefile
+    - benchmark/**/*
+    - spec/**/*
+    - test/**/*
