--- a/Taskfile.yml
+++ b/Taskfile.yml
@@ -339,7 +339,13 @@ tasks:
   #
   docs:generate:
     cmds:
-      - bundle exec yardoc
+      ##
+      # NOTE: yard supports plugins as gems only.
+      # - https://rubydoc.info/gems/yard/file/docs/GettingStarted.md#plugin-support
+      #
+      # NOTE: `RUBYLIB` is used to extend Ruby's `$LOAD_PATH`. This way yard treats `./yard` folder as a directory with custom gems.
+      #
+      - RUBYLIB=./yard bundle exec yardoc
 
   docs:generate:open:
     cmds:
