--- a/Taskfile.yml
+++ b/Taskfile.yml
@@ -670,4 +670,10 @@ tasks:
   yard_junk:
     cmds:
       - mkdir -p docs
-      - bundle exec yard-junk --text --html docs/junk-yard.html
+      ##
+      # NOTE: yard supports plugins as gems only.
+      # - https://rubydoc.info/gems/yard/file/docs/GettingStarted.md#plugin-support
+      #
+      # NOTE: `RUBYLIB` is used to extend Ruby's `$LOAD_PATH`. This way yard treats `./yard` folder as a directory with custom gems.
+      #
+      - RUBYLIB=./yard bundle exec yard-junk --text --html docs/junk-yard.html
