--- a/.gitignore
+++ b/.gitignore
@@ -61,6 +61,7 @@
 flowchart.html
 
 ##
-# NOTE: Ignores `TODO.md`. Usually, this file is used for notes that are NOT ready to be shared with the outside world.
+# NOTE: Ignores `TODO.md` and `TODO`. Usually, this file and folder are used for notes that are NOT ready to be shared with the outside world.
 #
 TODO.md
+TODO
