--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -14,7 +14,7 @@ require:
   #
   - rubocop-rspec
   ##
-  # Rubocop for common performance issues.
+  # Rubocop cops for common performance issues.
   # - https://github.com/rubocop/rubocop-performance
   #
   # NOTE: `rubocop-performance` is automatically bundled with Standard.
@@ -22,13 +22,19 @@ require:
   #
   - rubocop-performance
   ##
-  # RuboCop Cop that detects the use of magic numbers.
+  # RuboCop cops that detect the use of magic numbers.
   # - https://github.com/meetcleo/rubocop-magic_numbers
   #
   # TODO: Leave explanation to every `MagicNumbers` cops complaints.
+  # NOTE: Do NOT forget to uncomment `MagicNumbers` custom configs.
   # - rubocop-magic_numbers
   ##
-  # Rubocop for common thread safety issues.
+  # RuboCop cops that enforce Ruby gem packaging best practices.
+  # - https://github.com/utkarsh2102/rubocop-packaging
+  #
+  - rubocop-packaging
+  ##
+  # Rubocop cops for common thread safety issues.
   # - https://github.com/covermymeds/rubocop-thread_safety
   #
   # TODO: Leave explanation to every `ThreadSafety/InstanceVariableInClassMethod`.
@@ -64,14 +70,14 @@ AllCops:
     #
     - lib/convenient_service/dependencies/**/*
 
-MagicNumbers:
-  Exclude:
-    ##
-    # NOTE: Excludes the following files/folders from linting magic numbers.
-    # - https://github.com/meetcleo/rubocop-magic_numbers
-    # - https://docs.rubocop.org/rubocop/configuration.html#includingexcluding-files
-    #
-    - Rakefile
-    - benchmark/**/*
-    - spec/**/*
-    - test/**/*
+# MagicNumbers:
+#   Exclude:
+#     ##
+#     # NOTE: Excludes the following files/folders from linting magic numbers.
+#     # - https://github.com/meetcleo/rubocop-magic_numbers
+#     # - https://docs.rubocop.org/rubocop/configuration.html#includingexcluding-files
+#     #
+#     - Rakefile
+#     - benchmark/**/*
+#     - spec/**/*
+#     - test/**/*
