chore(ruby): use 3.3.0 by default in host

--- a/.dev/.tmuxinator.yml
+++ b/.dev/.tmuxinator.yml
@@ -17,7 +17,7 @@ windows:
       panes:
         - task docker:bash:ruby_2.7
         - task docker:bash:ruby_3.3
-        - git statuss
+        - git status
   - api_docs:
       layout: even-vertical
       root: .
