--- a/docker/truffleruby-22.3/Dockerfile
+++ b/docker/truffleruby-22.3/Dockerfile
@@ -12,13 +12,13 @@
 #   cd convenient_service
 #   cp Gemfile Gemfile.truffleruby-22.3
 #   docker build . -f docker/truffleruby-22.3/Dockerfile -t convenient_service:truffleruby-22.3
-#   # or `task docker:build:jruby_9.4`
+#   # or `task docker:build ENGINE=truffleruby VERSION=22.3`
 #
 # NOTE: A command to run bash in container.
 #
 #   cd convenient_service
 #   docker run --rm -it -v $(pwd):/gem convenient_service:truffleruby-22.3 bash
-#   # or `task docker:bash:jruby_9.4`
+#   # or `task docker:bash ENGINE=jruby VERSION=9.4`
 #
 # NOTE: If there are no memory, performance, or cost constraints, prefer to use as standard Linux distribution as it is possible.
 # In a general case, you simply won't have enough time to resolve all the "quirks" of more specific distributions if you are an application developer.
