--- a/docker/ruby-2.7/Dockerfile
+++ b/docker/ruby-2.7/Dockerfile
@@ -1,35 +1,35 @@
 ##
-# Ruby 3.3 with Node.js 18.x.
+# Ruby 2.7 with Node.js 16.x.
 #
 # NOTE: Linted by hadolint.
 #
-#   docker run --rm -i ghcr.io/hadolint/hadolint < docker/3.3/Dockerfile
+#   docker run --rm -i ghcr.io/hadolint/hadolint < docker/ruby-2.7/Dockerfile
 #
 # NOTE: A command to build image.
 #
 #   cd convenient_service
-#   cp Gemfile Gemfile.3.3
-#   docker build . -f docker/3.3/Dockerfile -t convenient_service:3.3
-#   # or `task docker:build:ruby_3.3`
+#   cp Gemfile Gemfile.ruby-2.7
+#   docker build . -f docker/ruby-2.7/Dockerfile -t convenient_service:ruby-2.7
+#   # or `task docker:build ENGINE=ruby VERSION=2.7`
 #
 # NOTE: A command to run bash in container.
 #
 #   cd convenient_service
-#   docker run --rm -it -v $(pwd):/gem convenient_service:3.3 bash
-#   # or `task docker:bash:ruby_3.3`
+#   docker run --rm -it -v $(pwd):/gem convenient_service:ruby-2.7 bash
+#   # or `task docker:bash ENGINE=ruby VERSION=2.7`
 #
 # NOTE: If there are no memory, performance, or cost constraints, prefer to use as standard Linux distribution as it is possible.
 # In a general case, you simply won't have enough time to resolve all the "quirks" of more specific distributions if you are an application developer.
 # That is why a `slim` version is used instead of `alpine`.
 # Also `slim` is more similar to Ubuntu.
-# - https://github.com/timbru31/docker-ruby-node/tree/master/3.3/18
+# - https://github.com/timbru31/docker-ruby-node/tree/master/ruby-2.7/16
 # - https://medium.com/swlh/alpine-slim-stretch-buster-jessie-bullseye-bookworm-what-are-the-differences-in-docker-62171ed4531d
 # - https://hub.docker.com/r/timbru31/ruby-node/tags
 #
-# NOTE: Hydrogen means Node.js 18.x.
+# NOTE: Gallium means Node.js 16.x.
 # https://github.com/nodejs/Release
 #
-FROM timbru31/ruby-node:3.3-slim-hydrogen
+FROM timbru31/ruby-node:2.7-slim-gallium
 
 ##
 # NOTE: `bundle install` dependencies.
@@ -52,7 +52,7 @@ COPY . /gem
 # - https://docs.docker.com/engine/reference/builder/#env
 # - https://stackoverflow.com/questions/48863711/is-it-possible-to-override-gemfile-for-local-development
 #
-ENV BUNDLE_GEMFILE=Gemfile.3.3
+ENV BUNDLE_GEMFILE=Gemfile.ruby-2.7
 
 RUN bundle install
 
