--- a/Taskfile.yml
+++ b/Taskfile.yml
@@ -136,208 +136,83 @@ tasks:
       - rm -rf gemfiles
 
   ##
+  # NOTE: Usage examples.
+  #   task docker:bash ENGINE=ruby VERSION=2.7
+  #   task docker:bash ENGINE=ruby VERSION=3.0
+  #   task docker:bash ENGINE=ruby VERSION=3.1
+  #   task docker:bash ENGINE=ruby VERSION=3.2
+  #   task docker:bash ENGINE=ruby VERSION=3.3
+  #   task docker:bash ENGINE=jruby VERSION=9.4
+  #   task docker:bash ENGINE=truffleruby VERSION=22.3
+  #
   # NOTE: JRuby 9.4 aims CRuby 3.1 compatibility.
   # - https://www.jruby.org/download
   #
-  docker:bash:jruby_9.4:
+  # NOTE: TruffleRuby 22.3 aims CRuby 3.1 compatibility.
+  # - https://github.com/oracle/truffleruby/blob/master/doc/user/compatibility.md
+  #
+  # NOTE: Naming `ENGINE` is inspired by `ruby_engine` gem.
+  # - https://github.com/janlelis/ruby_engine
+  #
+  docker:bash:
     cmds:
-      - docker run --rm -it -v $(pwd):/gem convenient_service:jruby-9.4 bash
+      - docker run --rm -it -v $(pwd):/gem convenient_service:{{.ENGINE}}-{{.VERSION}} bash
     interactive: true
     preconditions:
       - sh: '[ "${IN_DOCKER_CONTAINER}" != "true" ]'
         msg: This task can be invoked only from the host operating system (https://www.ibm.com/cloud/learn/containerization)
+    requires:
+      vars: [ENGINE, VERSION]
 
-  docker:bash:ruby_2.7:
+  docker:build:all:
     cmds:
-      - docker run --rm -it -v $(pwd):/gem convenient_service:2.7 bash
-    interactive: true
-    preconditions:
-      - sh: '[ "${IN_DOCKER_CONTAINER}" != "true" ]'
-        msg: This task can be invoked only from the host operating system (https://www.ibm.com/cloud/learn/containerization)
-
-  docker:bash:ruby_3.0:
-    cmds:
-      - docker run --rm -it -v $(pwd):/gem convenient_service:3.0 bash
-    interactive: true
-    preconditions:
-      - sh: '[ "${IN_DOCKER_CONTAINER}" != "true" ]'
-        msg: This task can be invoked only from the host operating system (https://www.ibm.com/cloud/learn/containerization)
-
-  docker:bash:ruby_3.1:
-    cmds:
-      - docker run --rm -it -v $(pwd):/gem convenient_service:3.1 bash
-    interactive: true
-    preconditions:
-      - sh: '[ "${IN_DOCKER_CONTAINER}" != "true" ]'
-        msg: This task can be invoked only from the host operating system (https://www.ibm.com/cloud/learn/containerization)
-
-  docker:bash:ruby_3.2:
-    cmds:
-      - docker run --rm -it -v $(pwd):/gem convenient_service:3.2 bash
-    interactive: true
-    preconditions:
-      - sh: '[ "${IN_DOCKER_CONTAINER}" != "true" ]'
-        msg: This task can be invoked only from the host operating system (https://www.ibm.com/cloud/learn/containerization)
-
-  docker:bash:ruby_3.3:
-    cmds:
-      - docker run --rm -it -v $(pwd):/gem convenient_service:3.3 bash
-    interactive: true
+      - task: docker:build ENGINE=ruby VERSION=2.7
+      - task: docker:build ENGINE=ruby VERSION=3.0
+      - task: docker:build ENGINE=ruby VERSION=3.1
+      - task: docker:build ENGINE=ruby VERSION=3.2
+      - task: docker:build ENGINE=ruby VERSION=3.3
+      - task: docker:build ENGINE=jruby VERSION=9.4
+      - task: docker:build ENGINE=truffleruby VERSION=22.3
     preconditions:
       - sh: '[ "${IN_DOCKER_CONTAINER}" != "true" ]'
         msg: This task can be invoked only from the host operating system (https://www.ibm.com/cloud/learn/containerization)
 
   ##
+  # NOTE: Usage examples.
+  #   task docker:build ENGINE=ruby VERSION=2.7
+  #   task docker:build ENGINE=ruby VERSION=3.0
+  #   task docker:build ENGINE=ruby VERSION=3.1
+  #   task docker:build ENGINE=ruby VERSION=3.2
+  #   task docker:build ENGINE=ruby VERSION=3.3
+  #   task docker:build ENGINE=jruby VERSION=9.4
+  #   task docker:build ENGINE=truffleruby VERSION=22.3
+  #
+  # NOTE: JRuby 9.4 aims CRuby 3.1 compatibility.
+  # - https://www.jruby.org/download
+  #
   # NOTE: TruffleRuby 22.3 aims CRuby 3.1 compatibility.
   # - https://github.com/oracle/truffleruby/blob/master/doc/user/compatibility.md
   #
-  docker:bash:truffleruby_22.3:
-    cmds:
-      - docker run --rm -it -v $(pwd):/gem convenient_service:truffleruby-22.3 bash
-    interactive: true
-    preconditions:
-      - sh: '[ "${IN_DOCKER_CONTAINER}" != "true" ]'
-        msg: This task can be invoked only from the host operating system (https://www.ibm.com/cloud/learn/containerization)
-
+  # NOTE: Naming `ENGINE` is inspired by `ruby_engine` gem.
+  # - https://github.com/janlelis/ruby_engine
+  #
+  # NOTE: Meaning of `|| 2> /dev/null`.
+  # - https://stackoverflow.com/a/10250395/12201472
+  #
+  # NOTE: Meaning of `|| true`.
+  # - https://superuser.com/a/887349/1180656
+  #
   docker:build:
     cmds:
-      - task: docker:build:ruby_2.7
-      - task: docker:build:ruby_3.0
-      - task: docker:build:ruby_3.1
-      - task: docker:build:ruby_3.2
-      - task: docker:build:ruby_3.3
-      - task: docker:build:jruby_9.4
-      - task: docker:build:truffleruby_22.3
+      - rm Gemfile.{{.ENGINE}}-{{.VERSION}} 2> /dev/null || true
+      - rm Gemfile.{{.ENGINE}}-{{.VERSION}}.lock 2> /dev/null || true
+      - cp Gemfile Gemfile.{{.ENGINE}}-{{.VERSION}}
+      - docker build . -f docker/{{.ENGINE}}-{{.VERSION}}/Dockerfile -t convenient_service:{{.ENGINE}}-{{.VERSION}}
     preconditions:
       - sh: '[ "${IN_DOCKER_CONTAINER}" != "true" ]'
         msg: This task can be invoked only from the host operating system (https://www.ibm.com/cloud/learn/containerization)
-
-  ##
-  # NOTE: JRuby 9.4 aims CRuby 3.1 compatibility.
-  # - https://www.jruby.org/download
-  #
-  docker:build:jruby_9.4:
-    cmds:
-      ##
-      # NOTE: Meaning of `|| 2> /dev/null`.
-      # https://stackoverflow.com/a/10250395/12201472
-      #
-      # NOTE: Meaning of `|| true`.
-      # https://superuser.com/a/887349/1180656
-      #
-      - rm Gemfile.jruby-9.4 2> /dev/null || true
-      - rm Gemfile.jruby-9.4.lock 2> /dev/null || true
-      - cp Gemfile Gemfile.jruby-9.4
-      - docker build . -f docker/jruby-9.4/Dockerfile -t convenient_service:jruby-9.4
-    preconditions:
-      - sh: '[ "${IN_DOCKER_CONTAINER}" != "true" ]'
-        msg: This task can be invoked only from the host operating system (https://www.ibm.com/cloud/learn/containerization)
-
-  docker:build:ruby_2.7:
-    cmds:
-      ##
-      # NOTE: Meaning of `|| 2> /dev/null`.
-      # https://stackoverflow.com/a/10250395/12201472
-      #
-      # NOTE: Meaning of `|| true`.
-      # https://superuser.com/a/887349/1180656
-      #
-      - rm Gemfile.2.7 2> /dev/null || true
-      - rm Gemfile.2.7.lock 2> /dev/null || true
-      - cp Gemfile Gemfile.2.7
-      - docker build . -f docker/2.7/Dockerfile -t convenient_service:2.7
-    preconditions:
-      - sh: '[ "${IN_DOCKER_CONTAINER}" != "true" ]'
-        msg: This task can be invoked only from the host operating system (https://www.ibm.com/cloud/learn/containerization)
-
-  docker:build:ruby_3.0:
-    cmds:
-      ##
-      # NOTE: Meaning of `|| 2> /dev/null`.
-      # https://stackoverflow.com/a/10250395/12201472
-      #
-      # NOTE: Meaning of `|| true`.
-      # https://superuser.com/a/887349/1180656
-      #
-      - rm Gemfile.3.0 2> /dev/null || true
-      - rm Gemfile.3.0.lock 2> /dev/null || true
-      - cp Gemfile Gemfile.3.0
-      - docker build . -f docker/3.0/Dockerfile -t convenient_service:3.0
-    preconditions:
-      - sh: '[ "${IN_DOCKER_CONTAINER}" != "true" ]'
-        msg: This task can be invoked only from the host operating system (https://www.ibm.com/cloud/learn/containerization)
-
-  docker:build:ruby_3.1:
-    cmds:
-      ##
-      # NOTE: Meaning of `|| 2> /dev/null`.
-      # https://stackoverflow.com/a/10250395/12201472
-      #
-      # NOTE: Meaning of `|| true`.
-      # https://superuser.com/a/887349/1180656
-      #
-      - rm Gemfile.3.1 2> /dev/null || true
-      - rm Gemfile.3.1.lock 2> /dev/null || true
-      - cp Gemfile Gemfile.3.1
-      - docker build . -f docker/3.1/Dockerfile -t convenient_service:3.1
-    preconditions:
-      - sh: '[ "${IN_DOCKER_CONTAINER}" != "true" ]'
-        msg: This task can be invoked only from the host operating system (https://www.ibm.com/cloud/learn/containerization)
-
-  docker:build:ruby_3.2:
-    cmds:
-      ##
-      # NOTE: Meaning of `|| 2> /dev/null`.
-      # https://stackoverflow.com/a/10250395/12201472
-      #
-      # NOTE: Meaning of `|| true`.
-      # https://superuser.com/a/887349/1180656
-      #
-      - rm Gemfile.3.2 2> /dev/null || true
-      - rm Gemfile.3.2.lock 2> /dev/null || true
-      - cp Gemfile Gemfile.3.2
-      - docker build . -f docker/3.2/Dockerfile -t convenient_service:3.2
-    preconditions:
-      - sh: '[ "${IN_DOCKER_CONTAINER}" != "true" ]'
-        msg: This task can be invoked only from the host operating system (https://www.ibm.com/cloud/learn/containerization)
-
-  docker:build:ruby_3.3:
-    cmds:
-      ##
-      # NOTE: Meaning of `|| 2> /dev/null`.
-      # https://stackoverflow.com/a/10250395/12201472
-      #
-      # NOTE: Meaning of `|| true`.
-      # https://superuser.com/a/887349/1180656
-      #
-      - rm Gemfile.3.3 2> /dev/null || true
-      - rm Gemfile.3.3.lock 2> /dev/null || true
-      - cp Gemfile Gemfile.3.3
-      - docker build . -f docker/3.3/Dockerfile -t convenient_service:3.3
-    preconditions:
-      - sh: '[ "${IN_DOCKER_CONTAINER}" != "true" ]'
-        msg: This task can be invoked only from the host operating system (https://www.ibm.com/cloud/learn/containerization)
-
-  ##
-  # NOTE: TruffleRuby 22.3 aims CRuby 3.1 compatibility.
-  # - https://github.com/oracle/truffleruby/blob/master/doc/user/compatibility.md
-  #
-  docker:build:truffleruby_22.3:
-    cmds:
-      ##
-      # NOTE: Meaning of `|| 2> /dev/null`.
-      # https://stackoverflow.com/a/10250395/12201472
-      #
-      # NOTE: Meaning of `|| true`.
-      # https://superuser.com/a/887349/1180656
-      #
-      - rm Gemfile.truffleruby-22.3 2> /dev/null || true
-      - rm Gemfile.truffleruby-22.3.lock 2> /dev/null || true
-      - cp Gemfile Gemfile.truffleruby-22.3
-      - docker build . -f docker/truffleruby-22.3/Dockerfile -t convenient_service:truffleruby-22.3
-    preconditions:
-      - sh: '[ "${IN_DOCKER_CONTAINER}" != "true" ]'
-        msg: This task can be invoked only from the host operating system (https://www.ibm.com/cloud/learn/containerization)
+    requires:
+      vars: [ENGINE, VERSION]
 
   ##
   # NOTE: Dev only command.
