chore(taskfile): reorganize console/playground commands

--- a/Taskfile.yml
+++ b/Taskfile.yml
@@ -18,92 +18,25 @@ tasks:
       - task: test
 
   ##
+  # NOTE: Usage examples.
+  #   APPRAISAL=all task console
+  #   APPRAISAL=dry task console
+  #   APPRAISAL=rails_5.2 task console
+  #   APPRAISAL=rails_6.0 task console
+  #   APPRAISAL=rails_6.1 task console
+  #   APPRAISAL=rails_7.0 task console
+  #   task console
+  #
+  # NOTE: Setting `APPRAISAL` after `task console` does NOT work. Consider to open an issue.
   # NOTE: `task console` is also aliased as `task playground`.
+  # NOTE: `APPRAISAL_COMMAND` must be kept in sync with `Appraisals` file.
   #
   console:
     cmds:
-      - bundle exec rake playground
-    interactive: true
-
-  ##
-  # NOTE: `task console:all` is also aliased as `task playground:all`.
-  # NOTE: `APPRAISAL_NAME` should be kept in sync with `Appraisals` file.
-  #
-  console:all:
-    cmds:
-      - bundle exec appraisal {{.APPRAISAL_NAME}} rake playground
+      - bundle exec {{.APPRAISAL_COMMAND}} rake playground
     vars:
-      APPRAISAL_NAME:
-        sh: ruby -e 'print [::RUBY_ENGINE, ::RUBY_VERSION, "all"].join("_")'
-    interactive: true
-
-  ##
-  # NOTE: `task console:dry` is also aliased as `task playground:dry`.
-  # NOTE: `APPRAISAL_NAME` should be kept in sync with `Appraisals` file.
-  #
-  console:dry:
-    cmds:
-      - bundle exec appraisal {{.APPRAISAL_NAME}} rake playground
-    vars:
-      APPRAISAL_NAME:
-        sh: ruby -e 'print [::RUBY_ENGINE, ::RUBY_VERSION, "dry"].join("_")'
-    interactive: true
-
-  ##
-  # NOTE: `task console:rails_5.2` is also aliased as `task playground:rails_5.2`.
-  # NOTE: `APPRAISAL_NAME` should be kept in sync with `Appraisals` file.
-  #
-  console:rails_5.2:
-    cmds:
-      - bundle exec appraisal {{.APPRAISAL_NAME}} rake playground
-    vars:
-      APPRAISAL_NAME:
-        sh: ruby -e 'print [::RUBY_ENGINE, ::RUBY_VERSION, "rails_5.2"].join("_")'
-    interactive: true
-
-  ##
-  # NOTE: `task console:rails_6.0` is also aliased as `task playground:rails_6.0`.
-  # NOTE: `APPRAISAL_NAME` should be kept in sync with `Appraisals` file.
-  #
-  console:rails_6.0:
-    cmds:
-      - bundle exec appraisal {{.APPRAISAL_NAME}} rake playground
-    vars:
-      APPRAISAL_NAME:
-        sh: ruby -e 'print [::RUBY_ENGINE, ::RUBY_VERSION, "rails_6.0"].join("_")'
-    interactive: true
-
-  ##
-  # NOTE: `task console:rails_6.1` is also aliased as `task playground:rails_6.1`.
-  # NOTE: `APPRAISAL_NAME` should be kept in sync with `Appraisals` file.
-  #
-  console:rails_6.1:
-    cmds:
-      - bundle exec appraisal {{.APPRAISAL_NAME}} rake playground
-    vars:
-      APPRAISAL_NAME:
-        sh: ruby -e 'print [::RUBY_ENGINE, ::RUBY_VERSION, "rails_6.1"].join("_")'
-    interactive: true
-
-  ##
-  # NOTE: `task console:rails_7.0` is also aliased as `task playground:rails_7.0`.
-  # NOTE: `APPRAISAL_NAME` should be kept in sync with `Appraisals` file.
-  #
-  console:rails_7.0:
-    cmds:
-      - bundle exec appraisal {{.APPRAISAL_NAME}} rake playground
-    vars:
-      APPRAISAL_NAME:
-        sh: ruby -e 'print [::RUBY_ENGINE, ::RUBY_VERSION, "rails_7.0"].join("_")'
-    interactive: true
-
-  ##
-  # NOTE: `task console:standard` is also aliased as `task playground:standard`.
-  # NOTE: `APPRAISAL_NAME` should be kept in sync with `Appraisals` file.
-  #
-  console:standard:
-    cmds:
-      - bundle exec rake playground
+      APPRAISAL_COMMAND:
+        sh: ruby -e 'puts "appraisal" + " " + RUBY_ENGINE + "_" + RUBY_VERSION + "_" + ENV["APPRAISAL"] unless ENV["APPRAISAL"].to_s.empty?'
     interactive: true
 
   coverage:lcov:merge:
@@ -345,92 +278,25 @@ tasks:
       - bundle exec mutant run --include lib --require convenient_service --integration rspec -- 'ConvenientService*'
 
   ##
+  # NOTE: Usage examples.
+  #   APPRAISAL=all task playground
+  #   APPRAISAL=dry task playground
+  #   APPRAISAL=rails_5.2 task playground
+  #   APPRAISAL=rails_6.0 task playground
+  #   APPRAISAL=rails_6.1 task playground
+  #   APPRAISAL=rails_7.0 task playground
+  #   task playground
+  #
+  # NOTE: Setting `APPRAISAL` after `task playground` does NOT work. Consider to open an issue.
   # NOTE: `task playground` is also aliased as `task console`.
+  # NOTE: `APPRAISAL_COMMAND` must be kept in sync with `Appraisals` file.
   #
   playground:
     cmds:
-      - bundle exec rake playground
-    interactive: true
-
-  ##
-  # NOTE: `task playground:all` is also aliased as `task console:all`.
-  # NOTE: `APPRAISAL_NAME` should be kept in sync with `Appraisals` file.
-  #
-  playground:all:
-    cmds:
-      - bundle exec appraisal {{.APPRAISAL_NAME}} rake playground
+      - bundle exec {{.APPRAISAL_COMMAND}} rake playground
     vars:
-      APPRAISAL_NAME:
-        sh: ruby -e 'print [::RUBY_ENGINE, ::RUBY_VERSION, "all"].join("_")'
-    interactive: true
-
-  ##
-  # NOTE: `task playground:dry` is also aliased as `task console:dry`.
-  # NOTE: `APPRAISAL_NAME` should be kept in sync with `Appraisals` file.
-  #
-  playground:dry:
-    cmds:
-      - bundle exec appraisal {{.APPRAISAL_NAME}} rake playground
-    vars:
-      APPRAISAL_NAME:
-        sh: ruby -e 'print [::RUBY_ENGINE, ::RUBY_VERSION, "dry"].join("_")'
-    interactive: true
-
-  ##
-  # NOTE: `task playground:rails_5.2` is also aliased as `task console:rails_5.2`.
-  # NOTE: `APPRAISAL_NAME` should be kept in sync with `Appraisals` file.
-  #
-  playground:rails_5.2:
-    cmds:
-      - bundle exec appraisal {{.APPRAISAL_NAME}} rake playground
-    vars:
-      APPRAISAL_NAME:
-        sh: ruby -e 'print [::RUBY_ENGINE, ::RUBY_VERSION, "rails_5.2"].join("_")'
-    interactive: true
-
-  ##
-  # NOTE: `task playground:rails_6.0` is also aliased as `task console:rails_6.0`.
-  # NOTE: `APPRAISAL_NAME` should be kept in sync with `Appraisals` file.
-  #
-  playground:rails_6.0:
-    cmds:
-      - bundle exec appraisal {{.APPRAISAL_NAME}} rake playground
-    vars:
-      APPRAISAL_NAME:
-        sh: ruby -e 'print [::RUBY_ENGINE, ::RUBY_VERSION, "rails_6.0"].join("_")'
-    interactive: true
-
-  ##
-  # NOTE: `task playground:rails_6.1` is also aliased as `task console:rails_6.1`.
-  # NOTE: `APPRAISAL_NAME` should be kept in sync with `Appraisals` file.
-  #
-  playground:rails_6.1:
-    cmds:
-      - bundle exec appraisal {{.APPRAISAL_NAME}} rake playground
-    vars:
-      APPRAISAL_NAME:
-        sh: ruby -e 'print [::RUBY_ENGINE, ::RUBY_VERSION, "rails_6.1"].join("_")'
-    interactive: true
-
-  ##
-  # NOTE: `task playground:rails_7.0` is also aliased as `task console:rails_7.0`.
-  # NOTE: `APPRAISAL_NAME` should be kept in sync with `Appraisals` file.
-  #
-  playground:rails_7.0:
-    cmds:
-      - bundle exec appraisal {{.APPRAISAL_NAME}} rake playground
-    vars:
-      APPRAISAL_NAME:
-        sh: ruby -e 'print [::RUBY_ENGINE, ::RUBY_VERSION, "rails_7.0"].join("_")'
-    interactive: true
-
-  ##
-  # NOTE: `task playground:standard` is also aliased as `task console:standard`.
-  # NOTE: `APPRAISAL_NAME` should be kept in sync with `Appraisals` file.
-  #
-  playground:standard:
-    cmds:
-      - bundle exec rake playground
+      APPRAISAL_COMMAND:
+        sh: ruby -e 'puts "appraisal" + " " + RUBY_ENGINE + "_" + RUBY_VERSION + "_" + ENV["APPRAISAL"] unless ENV["APPRAISAL"].to_s.empty?'
     interactive: true
 
   release:
